--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,89 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Resort</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Rochester' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,600italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/css/flexslider.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="assets/css/swipebox.css">
+
+  <script defer src="assets/js/jquery.flexslider.js"></script>
+  <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+  <script src="assets/js/jquery-1.8.3.min.js"></script>
+  <script src="assets/js/responsiveslides.min.js"></script>
+  <script>
+    $(function () {
+      $("#slider1").responsiveSlides({
+        auto: true,
+        speed: 500,
+        namespace: "callbacks",
+        pager: true,
+      });
+    });
+  </script>
+  <!----->
+  <!---- start-smoth-scrolling---->
+  <script type="text/javascript" src="assets/js/move-top.js"></script>
+  <script type="text/javascript" src="assets/js/easing.js"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function ($) {
+      $(".scroll").click(function (event) {
+        event.preventDefault();
+        $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1200);
+      });
+    });
+  </script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+			/*
+			var defaults = {
+			containerID: 'toTop', // fading element id
+			containerHoverID: 'toTopHover', // fading element hover id
+			scrollSpeed: 1200,
+			easingType: 'linear' 
+			};
+			*/
+      $().UItoTop({ easingType: 'easeOutQuart' });
+    });
+  </script>
+  <!---End-smoth-scrolling---->
+  <script src="assets/js/jquery.swipebox.min.js"></script>
+  <script type="text/javascript">
+    jQuery(function ($) {
+      $(".swipebox").swipebox();
+      $("span.menu").click(function () {
+        $(".top-menu ul").slideToggle("slow", function () {
+        });
+      });
+    });
+  </script>
+  <script type="text/javascript">
+    $(function () {
+      // Da error
+      // SyntaxHighlighter.all();
+    });
+    $(window).load(function () {
+      $('.flexslider').flexslider({
+        animation: "slide",
+        start: function (slider) {
+          $('body').removeClass('loading');
+        }
+      });
+    });
+  </script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
