--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Resort</title>
+  <title>Luxury Home</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="alquiler, hospedaje, santiago de cuba">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
